--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -124,7 +124,6 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
-set_real_ip_from 141.239.149.94;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.211.123;
 set_real_ip_from 142.44.234.69;
@@ -244,7 +243,6 @@ set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
-set_real_ip_from 185.11.136.232;
 set_real_ip_from 185.112.146.168;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.129.61.1;
@@ -667,7 +665,6 @@ set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.128.237;
 set_real_ip_from 198.58.107.53;
-set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.20;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
@@ -1234,7 +1231,6 @@ set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:3f::c0cc:80;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
-set_real_ip_from 2a00:17d8:100:1::fc1;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
@@ -1335,6 +1331,7 @@ set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:4b9e::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1610,7 +1607,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.227.192.24;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1626,6 +1622,7 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.223.119.5;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
@@ -1727,6 +1724,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
@@ -1922,4 +1920,3 @@ set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
-set_real_ip_from 98.128.173.33;
