--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,7 +124,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.239.149.94;
 allow 141.98.11.62;
 allow 142.171.211.123;
 allow 142.44.234.69;
@@ -244,7 +243,6 @@ allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
-allow 185.11.136.232;
 allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.129.61.1;
@@ -667,7 +665,6 @@ allow 198.251.89.96;
 allow 198.46.166.157;
 allow 198.50.128.237;
 allow 198.58.107.53;
-allow 198.96.155.3;
 allow 198.98.48.20;
 allow 198.98.48.31;
 allow 198.98.48.33;
@@ -1234,7 +1231,6 @@ allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
-allow 2a00:17d8:100:1::fc1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
@@ -1335,6 +1331,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1610,7 +1607,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.227.192.24;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1626,6 +1622,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.223.119.5;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1727,6 +1724,7 @@ allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1922,4 +1920,3 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
-allow 98.128.173.33;
