Update lists at 20240506-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,6 +124,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.239.149.94;
 allow 141.98.11.62;
 allow 142.171.211.123;
 allow 142.44.234.69;
@@ -181,6 +182,8 @@ allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.104.243.155;
 allow 172.235.36.50;
+allow 172.81.131.110;
+allow 172.81.131.111;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.242;
@@ -295,6 +298,7 @@ allow 185.195.71.8;
 allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
+allow 185.216.68.105;
 allow 185.216.68.128;
 allow 185.220.100.240;
 allow 185.220.100.241;
@@ -696,7 +700,6 @@ allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
-allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
@@ -986,6 +989,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8904::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1004,7 +1008,7 @@ allow 2.58.95.35;
 allow 2.58.95.38;
 allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::3;
+allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
@@ -1229,6 +1233,7 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
+allow 2a00:1728:3f::c0cc:69;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
@@ -1330,7 +1335,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
@@ -1622,7 +1626,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.223.119.5;
+allow 44.218.113.23;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1723,7 +1727,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.224;
 allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
