--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -6,7 +6,6 @@ deny 2001:1b60:3:239:1003:106:0:1;
 deny 2001:40e8:0:f090::100;
 deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:2:9161::1;
-deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:401:3200::3efd;
 deny 2001:41d0:404:300::dd2;
 deny 2001:41d0:601:1100::108e;
@@ -123,7 +122,7 @@ deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::3;
+deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
@@ -347,6 +346,7 @@ deny 2620:7:6001::ffff:c759:e659;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
+deny 2a00:1728:3f::c0cc:69;
 deny 2a00:1728:3f::c0cc:80;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
@@ -448,7 +448,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
