--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -124,6 +124,7 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 141.239.149.94;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.211.123;
 set_real_ip_from 142.44.234.69;
@@ -181,6 +182,8 @@ set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.214.41;
 set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.235.36.50;
+set_real_ip_from 172.81.131.110;
+set_real_ip_from 172.81.131.111;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.242;
@@ -295,6 +298,7 @@ set_real_ip_from 185.195.71.8;
 set_real_ip_from 185.195.71.9;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
+set_real_ip_from 185.216.68.105;
 set_real_ip_from 185.216.68.128;
 set_real_ip_from 185.220.100.240;
 set_real_ip_from 185.220.100.241;
@@ -696,7 +700,6 @@ set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:40e8:0:f090::100;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
-set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
 set_real_ip_from 2001:41d0:601:1100::108e;
@@ -986,6 +989,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:8904::f03c:93ff:fe68:23b3;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1004,7 +1008,7 @@ set_real_ip_from 2.58.95.35;
 set_real_ip_from 2.58.95.38;
 set_real_ip_from 2600:3c00:e000:4ee::3;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
-set_real_ip_from 2600:3c03:e000:fa::3;
+set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e5::104;
@@ -1229,6 +1233,7 @@ set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
+set_real_ip_from 2a00:1728:3f::c0cc:69;
 set_real_ip_from 2a00:1728:3f::c0cc:80;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
@@ -1330,7 +1335,6 @@ set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:105:82c0::1;
 set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:4b9e::1;
@@ -1622,7 +1626,7 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.223.119.5;
+set_real_ip_from 44.218.113.23;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
@@ -1723,7 +1727,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
