--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,6 +110,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -125,6 +126,7 @@ allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.149.94;
 allow 141.98.11.62;
+allow 142.171.211.123;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 144.172.118.4;
@@ -145,7 +147,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -227,6 +228,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
+allow 18.214.38.68;
 allow 184.105.48.40;
 allow 184.75.223.219;
 allow 185.100.85.132;
@@ -805,8 +807,10 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
+allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
 allow 202.61.226.98;
@@ -941,6 +945,7 @@ allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
 allow 210.223.41.251;
+allow 212.21.66.6;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.52.76;
@@ -986,6 +991,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -1008,6 +1014,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
@@ -1691,7 +1698,6 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.230;
 allow 45.95.169.255;
-allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.226.164.14;
@@ -1736,7 +1742,6 @@ allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
-allow 52.55.218.144;
 allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
