Update lists at 20240506-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -197,6 +197,7 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.97.114.202;
 allow 178.162.209.56;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -228,7 +229,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.214.38.68;
 allow 184.105.48.40;
 allow 184.75.223.219;
 allow 185.100.85.132;
@@ -667,7 +667,6 @@ allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.46.166.157;
-allow 198.46.215.32;
 allow 198.50.128.237;
 allow 198.58.107.53;
 allow 198.96.155.3;
@@ -1243,6 +1242,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1724,6 +1724,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.44.224.249;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
