--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -42,6 +42,9 @@ set_real_ip_from 107.172.31.165;
 set_real_ip_from 107.173.179.59;
 set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.174.231.197;
+set_real_ip_from 107.181.245.162;
+set_real_ip_from 107.181.245.163;
+set_real_ip_from 107.181.245.164;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.1.160;
@@ -555,7 +558,6 @@ set_real_ip_from 191.252.220.31;
 set_real_ip_from 191.96.165.34;
 set_real_ip_from 192.210.255.181;
 set_real_ip_from 192.42.116.14;
-set_real_ip_from 192.42.116.15;
 set_real_ip_from 192.42.116.17;
 set_real_ip_from 192.42.116.173;
 set_real_ip_from 192.42.116.174;
@@ -678,6 +680,7 @@ set_real_ip_from 198.98.50.215;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.51.52;
+set_real_ip_from 198.98.52.24;
 set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.60.90;
@@ -780,7 +783,6 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:219;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:220;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:221;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5519;
@@ -1042,6 +1044,7 @@ set_real_ip_from 2605:6400:10:3f9:42af:65de:583f:49f1;
 set_real_ip_from 2605:6400:10:3f9:8fca:7115:49b6:57fd;
 set_real_ip_from 2605:6400:10:3f9:b9ce:43e8:7a59:6f17;
 set_real_ip_from 2605:6400:10:3f9:bf6e:ca88:3193:7de8;
+set_real_ip_from 2605:6400:10:3f9:c161:156a:847d:1a1d;
 set_real_ip_from 2605:6400:10:3f9:f741:57f7:8f88:b2bd;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
@@ -1724,7 +1727,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.44.224.249;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
@@ -1754,6 +1756,7 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.209.179.76;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1771,7 +1774,6 @@ set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.179;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.63.244.28;
-set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 67.219.109.141;
@@ -1864,7 +1866,6 @@ set_real_ip_from 89.58.63.200;
 set_real_ip_from 91.103.253.141;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
-set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
 set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
