--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -85,7 +85,6 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:219;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:220;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:221;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5519;
@@ -154,6 +153,7 @@ set_real_ip_from 2605:6400:10:3f9:42af:65de:583f:49f1;
 set_real_ip_from 2605:6400:10:3f9:8fca:7115:49b6:57fd;
 set_real_ip_from 2605:6400:10:3f9:b9ce:43e8:7a59:6f17;
 set_real_ip_from 2605:6400:10:3f9:bf6e:ca88:3193:7de8;
+set_real_ip_from 2605:6400:10:3f9:c161:156a:847d:1a1d;
 set_real_ip_from 2605:6400:10:3f9:f741:57f7:8f88:b2bd;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
