Update lists at 20240506-2100

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -85,6 +85,7 @@ deny 2001:67c:6ec:203:192:42:116:219;
 deny 2001:67c:6ec:203:192:42:116:220;
 deny 2001:67c:6ec:203:192:42:116:221;
 deny 2001:67c:6ec:203:218:33ff:fe44:5514;
+deny 2001:67c:6ec:203:218:33ff:fe44:5515;
 deny 2001:67c:6ec:203:218:33ff:fe44:5517;
 deny 2001:67c:6ec:203:218:33ff:fe44:5518;
 deny 2001:67c:6ec:203:218:33ff:fe44:5519;
@@ -118,7 +119,6 @@ deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 2400:8901::f03c:93ff:fe68:23b3;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
-deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
@@ -235,7 +235,6 @@ deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fe09::2;
-deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
 deny 2607:5300:205:200::163a;
@@ -287,7 +286,6 @@ deny 2620:7:6001::157;
 deny 2620:7:6001::158;
 deny 2620:7:6001::159;
 deny 2620:7:6001::160;
-deny 2620:7:6001::161;
 deny 2620:7:6001::162;
 deny 2620:7:6001::163;
 deny 2620:7:6001::164;
@@ -308,7 +306,6 @@ deny 2620:7:6001::178;
 deny 2620:7:6001::179;
 deny 2620:7:6001::180;
 deny 2620:7:6001::181;
-deny 2620:7:6001::182;
 deny 2620:7:6001::183;
 deny 2620:7:6001::184;
 deny 2620:7:6001::185;
@@ -411,7 +408,6 @@ deny 2a03:94e0:24a1:dead::1;
 deny 2a03:94e0:24d4::2;
 deny 2a03:94e0:24d4::3;
 deny 2a03:94e0:24d4::4;
-deny 2a03:94e0:24d4::5;
 deny 2a03:94e0:24d4::6;
 deny 2a03:94e0:24d4::7;
 deny 2a03:94e0:24d4::8;
@@ -448,7 +444,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
@@ -492,10 +487,7 @@ deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
-deny 2a0b:f4c0:16c:11::1;
-deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
@@ -503,11 +495,6 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
-deny 2a0b:f4c0:16c:5::1;
-deny 2a0b:f4c0:16c:6::1;
-deny 2a0b:f4c0:16c:7::1;
-deny 2a0b:f4c0:16c:8::1;
-deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -521,7 +508,6 @@ deny 2a0b:f4c2:1::135;
 deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
-deny 2a0b:f4c2:1::140;
 deny 2a0b:f4c2:1::141;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
@@ -557,7 +543,6 @@ deny 2a0b:f4c2:1::172;
 deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
-deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
 deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
@@ -565,7 +550,6 @@ deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
-deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
 deny 2a0b:f4c2:1::188;
@@ -601,7 +585,6 @@ deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
 deny 2a0b:f4c2:2::46;
-deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
@@ -614,7 +597,6 @@ deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
-deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
@@ -635,7 +617,6 @@ deny 2a0b:f4c2:3::69;
 deny 2a0b:f4c2:3::70;
 deny 2a0b:f4c2:3::71;
 deny 2a0b:f4c2:3::72;
-deny 2a0b:f4c2:3::73;
 deny 2a0b:f4c2:3::74;
 deny 2a0b:f4c2:3::75;
 deny 2a0b:f4c2:3::76;
@@ -684,7 +665,6 @@ deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:d0::1;
-deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -702,11 +682,9 @@ deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
-deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a10:1fc0:7::d6ca:a017;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a11:840:6:1b::b3a1:6b14;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
