--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,3 +1,4 @@
+deny 100.27.120.177;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 102.130.127.117;
@@ -31,7 +32,6 @@ deny 104.244.74.97;
 deny 104.244.75.74;
 deny 104.244.77.192;
 deny 104.244.77.208;
-deny 104.244.78.162;
 deny 104.244.78.233;
 deny 104.244.79.44;
 deny 104.244.79.50;
@@ -125,14 +125,11 @@ deny 134.122.66.38;
 deny 135.125.205.25;
 deny 136.244.111.163;
 deny 138.59.18.110;
-deny 139.99.172.11;
 deny 139.99.8.57;
 deny 141.239.149.94;
 deny 141.98.11.62;
-deny 142.171.211.123;
 deny 142.44.234.69;
 deny 143.110.156.176;
-deny 144.172.118.4;
 deny 144.172.73.11;
 deny 144.172.73.6;
 deny 144.217.80.80;
@@ -158,7 +155,6 @@ deny 162.247.74.202;
 deny 162.247.74.204;
 deny 162.247.74.206;
 deny 162.247.74.213;
-deny 162.247.74.216;
 deny 162.247.74.217;
 deny 162.247.74.27;
 deny 162.247.74.7;
@@ -213,7 +209,6 @@ deny 178.20.55.182;
 deny 178.208.90.162;
 deny 178.218.144.18;
 deny 178.218.144.51;
-deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
 deny 178.236.247.122;
@@ -227,7 +222,6 @@ deny 179.43.159.199;
 deny 179.43.159.200;
 deny 179.43.159.201;
 deny 179.43.159.78;
-deny 179.43.167.205;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 179.48.251.188;
@@ -286,7 +280,6 @@ deny 185.181.61.18;
 deny 185.183.157.214;
 deny 185.183.159.40;
 deny 185.191.204.254;
-deny 185.193.158.134;
 deny 185.193.52.180;
 deny 185.195.71.10;
 deny 185.195.71.11;
@@ -308,14 +301,6 @@ deny 185.220.100.240;
 deny 185.220.100.241;
 deny 185.220.100.242;
 deny 185.220.100.243;
-deny 185.220.100.244;
-deny 185.220.100.245;
-deny 185.220.100.246;
-deny 185.220.100.247;
-deny 185.220.100.248;
-deny 185.220.100.249;
-deny 185.220.100.250;
-deny 185.220.100.251;
 deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
@@ -349,7 +334,6 @@ deny 185.220.101.137;
 deny 185.220.101.138;
 deny 185.220.101.139;
 deny 185.220.101.14;
-deny 185.220.101.140;
 deny 185.220.101.141;
 deny 185.220.101.142;
 deny 185.220.101.143;
@@ -388,7 +372,6 @@ deny 185.220.101.172;
 deny 185.220.101.173;
 deny 185.220.101.174;
 deny 185.220.101.175;
-deny 185.220.101.176;
 deny 185.220.101.177;
 deny 185.220.101.178;
 deny 185.220.101.179;
@@ -397,7 +380,6 @@ deny 185.220.101.180;
 deny 185.220.101.181;
 deny 185.220.101.182;
 deny 185.220.101.183;
-deny 185.220.101.185;
 deny 185.220.101.186;
 deny 185.220.101.187;
 deny 185.220.101.188;
@@ -435,7 +417,6 @@ deny 185.220.101.43;
 deny 185.220.101.44;
 deny 185.220.101.45;
 deny 185.220.101.46;
-deny 185.220.101.47;
 deny 185.220.101.48;
 deny 185.220.101.49;
 deny 185.220.101.5;
@@ -448,7 +429,6 @@ deny 185.220.101.55;
 deny 185.220.101.56;
 deny 185.220.101.57;
 deny 185.220.101.58;
-deny 185.220.101.59;
 deny 185.220.101.6;
 deny 185.220.101.60;
 deny 185.220.101.61;
@@ -464,7 +444,6 @@ deny 185.220.101.7;
 deny 185.220.101.70;
 deny 185.220.101.71;
 deny 185.220.101.72;
-deny 185.220.101.73;
 deny 185.220.101.74;
 deny 185.220.101.75;
 deny 185.220.101.76;
@@ -492,7 +471,6 @@ deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
 deny 185.220.103.7;
-deny 185.220.103.8;
 deny 185.220.103.9;
 deny 185.225.69.203;
 deny 185.225.69.232;
@@ -558,6 +536,7 @@ deny 191.252.220.31;
 deny 191.96.165.34;
 deny 192.210.255.181;
 deny 192.42.116.14;
+deny 192.42.116.15;
 deny 192.42.116.17;
 deny 192.42.116.173;
 deny 192.42.116.174;
@@ -636,10 +615,8 @@ deny 193.218.118.133;
 deny 193.218.118.181;
 deny 193.218.118.182;
 deny 193.218.118.188;
-deny 193.218.118.89;
 deny 193.218.118.91;
 deny 193.233.133.109;
-deny 193.233.133.42;
 deny 193.239.232.230;
 deny 193.26.115.43;
 deny 193.26.115.61;
@@ -655,7 +632,6 @@ deny 194.233.174.56;
 deny 194.26.192.64;
 deny 194.26.192.77;
 deny 194.26.196.71;
-deny 195.160.220.104;
 deny 195.176.3.19;
 deny 195.176.3.20;
 deny 195.176.3.23;
@@ -783,6 +759,7 @@ deny 2001:67c:6ec:203:192:42:116:219;
 deny 2001:67c:6ec:203:192:42:116:220;
 deny 2001:67c:6ec:203:192:42:116:221;
 deny 2001:67c:6ec:203:218:33ff:fe44:5514;
+deny 2001:67c:6ec:203:218:33ff:fe44:5515;
 deny 2001:67c:6ec:203:218:33ff:fe44:5517;
 deny 2001:67c:6ec:203:218:33ff:fe44:5518;
 deny 2001:67c:6ec:203:218:33ff:fe44:5519;
@@ -820,7 +797,6 @@ deny 202.94.246.210;
 deny 204.137.14.104;
 deny 204.137.14.105;
 deny 204.137.14.106;
-deny 204.137.14.92;
 deny 204.194.29.4;
 deny 204.8.156.142;
 deny 204.85.191.7;
@@ -871,7 +847,6 @@ deny 204.8.96.157;
 deny 204.8.96.158;
 deny 204.8.96.159;
 deny 204.8.96.160;
-deny 204.8.96.161;
 deny 204.8.96.162;
 deny 204.8.96.163;
 deny 204.8.96.164;
@@ -892,7 +867,6 @@ deny 204.8.96.178;
 deny 204.8.96.179;
 deny 204.8.96.180;
 deny 204.8.96.181;
-deny 204.8.96.182;
 deny 204.8.96.183;
 deny 204.8.96.184;
 deny 204.8.96.185;
@@ -954,7 +928,6 @@ deny 213.252.140.118;
 deny 213.95.149.22;
 deny 216.239.90.19;
 deny 216.73.159.101;
-deny 216.73.159.75;
 deny 217.12.221.131;
 deny 217.146.2.41;
 deny 23.137.248.100;
@@ -998,7 +971,6 @@ deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
-deny 2402:1f00:8100:400::9;
 deny 2.57.122.179;
 deny 2.57.122.215;
 deny 2.57.122.246;
@@ -1126,7 +1098,6 @@ deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fe09::2;
-deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
 deny 2607:5300:205:200::163a;
@@ -1178,7 +1149,6 @@ deny 2620:7:6001::157;
 deny 2620:7:6001::158;
 deny 2620:7:6001::159;
 deny 2620:7:6001::160;
-deny 2620:7:6001::161;
 deny 2620:7:6001::162;
 deny 2620:7:6001::163;
 deny 2620:7:6001::164;
@@ -1199,7 +1169,6 @@ deny 2620:7:6001::178;
 deny 2620:7:6001::179;
 deny 2620:7:6001::180;
 deny 2620:7:6001::181;
-deny 2620:7:6001::182;
 deny 2620:7:6001::183;
 deny 2620:7:6001::184;
 deny 2620:7:6001::185;
@@ -1303,7 +1272,6 @@ deny 2a03:94e0:24a1:dead::1;
 deny 2a03:94e0:24d4::2;
 deny 2a03:94e0:24d4::3;
 deny 2a03:94e0:24d4::4;
-deny 2a03:94e0:24d4::5;
 deny 2a03:94e0:24d4::6;
 deny 2a03:94e0:24d4::7;
 deny 2a03:94e0:24d4::8;
@@ -1340,7 +1308,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1384,10 +1351,7 @@ deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
-deny 2a0b:f4c0:16c:11::1;
-deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
@@ -1395,11 +1359,6 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
-deny 2a0b:f4c0:16c:5::1;
-deny 2a0b:f4c0:16c:6::1;
-deny 2a0b:f4c0:16c:7::1;
-deny 2a0b:f4c0:16c:8::1;
-deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1413,7 +1372,6 @@ deny 2a0b:f4c2:1::135;
 deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
-deny 2a0b:f4c2:1::140;
 deny 2a0b:f4c2:1::141;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
@@ -1449,7 +1407,6 @@ deny 2a0b:f4c2:1::172;
 deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
-deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
 deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
@@ -1457,7 +1414,6 @@ deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
-deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
 deny 2a0b:f4c2:1::188;
@@ -1493,7 +1449,6 @@ deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
 deny 2a0b:f4c2:2::46;
-deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
@@ -1506,7 +1461,6 @@ deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
-deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
@@ -1527,7 +1481,6 @@ deny 2a0b:f4c2:3::69;
 deny 2a0b:f4c2:3::70;
 deny 2a0b:f4c2:3::71;
 deny 2a0b:f4c2:3::72;
-deny 2a0b:f4c2:3::73;
 deny 2a0b:f4c2:3::74;
 deny 2a0b:f4c2:3::75;
 deny 2a0b:f4c2:3::76;
@@ -1576,7 +1529,6 @@ deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:d0::1;
-deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1594,11 +1546,9 @@ deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
-deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a10:1fc0:7::d6ca:a017;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a11:840:6:1b::b3a1:6b14;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
@@ -1701,6 +1651,7 @@ deny 45.95.169.228;
 deny 45.95.169.229;
 deny 45.95.169.230;
 deny 45.95.169.255;
+deny 45.95.202.48;
 deny 46.165.243.36;
 deny 46.182.21.248;
 deny 46.226.164.14;
@@ -1729,7 +1680,6 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.126;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
@@ -1756,7 +1706,6 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.209.179.76;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1840,13 +1789,11 @@ deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.254.132;
 deny 88.209.197.8;
-deny 88.80.20.86;
 deny 89.147.108.209;
 deny 89.147.108.62;
 deny 89.147.108.90;
 deny 89.147.109.226;
 deny 89.147.110.118;
-deny 89.147.110.154;
 deny 89.147.110.200;
 deny 89.147.110.202;
 deny 89.147.110.214;
@@ -1906,7 +1853,6 @@ deny 94.16.116.86;
 deny 94.16.121.226;
 deny 94.16.121.91;
 deny 94.177.106.37;
-deny 94.177.106.46;
 deny 94.177.106.54;
 deny 94.177.106.55;
 deny 94.177.106.59;
