--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.27.120.177;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -32,6 +31,7 @@ allow 104.244.74.97;
 allow 104.244.75.74;
 allow 104.244.77.192;
 allow 104.244.77.208;
+allow 104.244.78.162;
 allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
@@ -94,6 +94,7 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
+allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -125,11 +126,13 @@ allow 134.122.66.38;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.149.94;
 allow 141.98.11.62;
 allow 142.44.234.69;
 allow 143.110.156.176;
+allow 144.172.118.4;
 allow 144.172.73.11;
 allow 144.172.73.6;
 allow 144.217.80.80;
@@ -155,6 +158,7 @@ allow 162.247.74.202;
 allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
+allow 162.247.74.216;
 allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
@@ -209,6 +213,7 @@ allow 178.20.55.182;
 allow 178.208.90.162;
 allow 178.218.144.18;
 allow 178.218.144.51;
+allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.236.247.122;
@@ -222,6 +227,7 @@ allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
+allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
@@ -229,19 +235,14 @@ allow 180.150.226.99;
 allow 184.105.48.40;
 allow 184.75.223.219;
 allow 185.100.85.132;
-allow 185.100.85.22;
-allow 185.100.85.23;
 allow 185.100.85.24;
 allow 185.100.85.25;
 allow 185.100.87.136;
-allow 185.100.87.139;
 allow 185.100.87.174;
 allow 185.100.87.192;
 allow 185.100.87.250;
-allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.112.146.168;
@@ -280,6 +281,7 @@ allow 185.181.61.18;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
+allow 185.193.158.134;
 allow 185.193.52.180;
 allow 185.195.71.10;
 allow 185.195.71.11;
@@ -305,9 +307,6 @@ allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
 allow 185.220.100.255;
-allow 185.220.101.0;
-allow 185.220.101.1;
-allow 185.220.101.10;
 allow 185.220.101.100;
 allow 185.220.101.101;
 allow 185.220.101.102;
@@ -318,11 +317,8 @@ allow 185.220.101.106;
 allow 185.220.101.107;
 allow 185.220.101.108;
 allow 185.220.101.109;
-allow 185.220.101.11;
 allow 185.220.101.110;
-allow 185.220.101.12;
 allow 185.220.101.128;
-allow 185.220.101.13;
 allow 185.220.101.130;
 allow 185.220.101.131;
 allow 185.220.101.132;
@@ -333,7 +329,7 @@ allow 185.220.101.136;
 allow 185.220.101.137;
 allow 185.220.101.138;
 allow 185.220.101.139;
-allow 185.220.101.14;
+allow 185.220.101.140;
 allow 185.220.101.141;
 allow 185.220.101.142;
 allow 185.220.101.143;
@@ -343,7 +339,6 @@ allow 185.220.101.146;
 allow 185.220.101.147;
 allow 185.220.101.148;
 allow 185.220.101.149;
-allow 185.220.101.15;
 allow 185.220.101.150;
 allow 185.220.101.151;
 allow 185.220.101.152;
@@ -354,7 +349,6 @@ allow 185.220.101.156;
 allow 185.220.101.157;
 allow 185.220.101.158;
 allow 185.220.101.159;
-allow 185.220.101.16;
 allow 185.220.101.160;
 allow 185.220.101.161;
 allow 185.220.101.162;
@@ -365,42 +359,27 @@ allow 185.220.101.166;
 allow 185.220.101.167;
 allow 185.220.101.168;
 allow 185.220.101.169;
-allow 185.220.101.17;
 allow 185.220.101.170;
 allow 185.220.101.171;
 allow 185.220.101.172;
 allow 185.220.101.173;
 allow 185.220.101.174;
 allow 185.220.101.175;
+allow 185.220.101.176;
 allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
-allow 185.220.101.18;
 allow 185.220.101.180;
 allow 185.220.101.181;
 allow 185.220.101.182;
 allow 185.220.101.183;
+allow 185.220.101.185;
 allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
-allow 185.220.101.19;
 allow 185.220.101.190;
 allow 185.220.101.191;
-allow 185.220.101.2;
-allow 185.220.101.20;
-allow 185.220.101.21;
-allow 185.220.101.22;
-allow 185.220.101.23;
-allow 185.220.101.24;
-allow 185.220.101.25;
-allow 185.220.101.26;
-allow 185.220.101.27;
-allow 185.220.101.28;
-allow 185.220.101.29;
-allow 185.220.101.3;
-allow 185.220.101.30;
-allow 185.220.101.31;
 allow 185.220.101.32;
 allow 185.220.101.33;
 allow 185.220.101.34;
@@ -409,7 +388,6 @@ allow 185.220.101.36;
 allow 185.220.101.37;
 allow 185.220.101.38;
 allow 185.220.101.39;
-allow 185.220.101.4;
 allow 185.220.101.40;
 allow 185.220.101.41;
 allow 185.220.101.42;
@@ -417,9 +395,9 @@ allow 185.220.101.43;
 allow 185.220.101.44;
 allow 185.220.101.45;
 allow 185.220.101.46;
+allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
-allow 185.220.101.5;
 allow 185.220.101.50;
 allow 185.220.101.51;
 allow 185.220.101.52;
@@ -429,7 +407,7 @@ allow 185.220.101.55;
 allow 185.220.101.56;
 allow 185.220.101.57;
 allow 185.220.101.58;
-allow 185.220.101.6;
+allow 185.220.101.59;
 allow 185.220.101.60;
 allow 185.220.101.61;
 allow 185.220.101.62;
@@ -440,17 +418,16 @@ allow 185.220.101.66;
 allow 185.220.101.67;
 allow 185.220.101.68;
 allow 185.220.101.69;
-allow 185.220.101.7;
 allow 185.220.101.70;
 allow 185.220.101.71;
 allow 185.220.101.72;
+allow 185.220.101.73;
 allow 185.220.101.74;
 allow 185.220.101.75;
 allow 185.220.101.76;
 allow 185.220.101.77;
 allow 185.220.101.78;
 allow 185.220.101.79;
-allow 185.220.101.8;
 allow 185.220.101.80;
 allow 185.220.101.81;
 allow 185.220.101.82;
@@ -461,7 +438,6 @@ allow 185.220.101.86;
 allow 185.220.101.87;
 allow 185.220.101.88;
 allow 185.220.101.89;
-allow 185.220.101.9;
 allow 185.220.101.90;
 allow 185.220.101.96;
 allow 185.220.101.97;
@@ -471,6 +447,7 @@ allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
 allow 185.220.103.7;
+allow 185.220.103.8;
 allow 185.220.103.9;
 allow 185.225.69.203;
 allow 185.225.69.232;
@@ -615,8 +592,10 @@ allow 193.218.118.133;
 allow 193.218.118.181;
 allow 193.218.118.182;
 allow 193.218.118.188;
+allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.233.133.109;
+allow 193.233.133.42;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
@@ -632,6 +611,7 @@ allow 194.233.174.56;
 allow 194.26.192.64;
 allow 194.26.192.77;
 allow 194.26.196.71;
+allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
 allow 195.176.3.23;
@@ -797,6 +777,7 @@ allow 202.94.246.210;
 allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
+allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.8.156.142;
 allow 204.85.191.7;
@@ -847,6 +828,7 @@ allow 204.8.96.157;
 allow 204.8.96.158;
 allow 204.8.96.159;
 allow 204.8.96.160;
+allow 204.8.96.161;
 allow 204.8.96.162;
 allow 204.8.96.163;
 allow 204.8.96.164;
@@ -867,6 +849,7 @@ allow 204.8.96.178;
 allow 204.8.96.179;
 allow 204.8.96.180;
 allow 204.8.96.181;
+allow 204.8.96.182;
 allow 204.8.96.183;
 allow 204.8.96.184;
 allow 204.8.96.185;
@@ -928,6 +911,7 @@ allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
+allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
@@ -971,6 +955,7 @@ allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
+allow 2402:1f00:8100:400::9;
 allow 2.57.122.179;
 allow 2.57.122.215;
 allow 2.57.122.246;
@@ -1098,6 +1083,7 @@ allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fe09::2;
+allow 2605:6400:d814:1b8::4;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
 allow 2607:5300:205:200::163a;
@@ -1149,6 +1135,7 @@ allow 2620:7:6001::157;
 allow 2620:7:6001::158;
 allow 2620:7:6001::159;
 allow 2620:7:6001::160;
+allow 2620:7:6001::161;
 allow 2620:7:6001::162;
 allow 2620:7:6001::163;
 allow 2620:7:6001::164;
@@ -1169,6 +1156,7 @@ allow 2620:7:6001::178;
 allow 2620:7:6001::179;
 allow 2620:7:6001::180;
 allow 2620:7:6001::181;
+allow 2620:7:6001::182;
 allow 2620:7:6001::183;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
@@ -1272,6 +1260,7 @@ allow 2a03:94e0:24a1:dead::1;
 allow 2a03:94e0:24d4::2;
 allow 2a03:94e0:24d4::3;
 allow 2a03:94e0:24d4::4;
+allow 2a03:94e0:24d4::5;
 allow 2a03:94e0:24d4::6;
 allow 2a03:94e0:24d4::7;
 allow 2a03:94e0:24d4::8;
@@ -1331,10 +1320,6 @@ allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
 allow 2a06:1700:0:12::4;
-allow 2a06:1700:0:15::1;
-allow 2a06:1700:0:15::2;
-allow 2a06:1700:0:15::3;
-allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
@@ -1359,10 +1344,6 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
-allow 2a0b:f4c2::;
-allow 2a0b:f4c2::1;
-allow 2a0b:f4c2::10;
-allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::132;
@@ -1372,6 +1353,7 @@ allow 2a0b:f4c2:1::135;
 allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
+allow 2a0b:f4c2:1::140;
 allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
@@ -1407,6 +1389,7 @@ allow 2a0b:f4c2:1::172;
 allow 2a0b:f4c2:1::173;
 allow 2a0b:f4c2:1::174;
 allow 2a0b:f4c2:1::175;
+allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
 allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
@@ -1414,25 +1397,13 @@ allow 2a0b:f4c2:1::180;
 allow 2a0b:f4c2:1::181;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
+allow 2a0b:f4c2:1::185;
 allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
-allow 2a0b:f4c2::12;
-allow 2a0b:f4c2::13;
-allow 2a0b:f4c2::14;
-allow 2a0b:f4c2::15;
-allow 2a0b:f4c2::16;
-allow 2a0b:f4c2::17;
-allow 2a0b:f4c2::18;
-allow 2a0b:f4c2::19;
-allow 2a0b:f4c2::2;
-allow 2a0b:f4c2::20;
-allow 2a0b:f4c2::21;
-allow 2a0b:f4c2::22;
-allow 2a0b:f4c2::23;
 allow 2a0b:f4c2:2::32;
 allow 2a0b:f4c2:2::33;
 allow 2a0b:f4c2:2::34;
@@ -1441,7 +1412,6 @@ allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
 allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
-allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
@@ -1449,9 +1419,9 @@ allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
+allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
-allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
@@ -1461,17 +1431,11 @@ allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
-allow 2a0b:f4c2::26;
+allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
-allow 2a0b:f4c2::27;
-allow 2a0b:f4c2::28;
-allow 2a0b:f4c2::29;
-allow 2a0b:f4c2::3;
-allow 2a0b:f4c2::30;
-allow 2a0b:f4c2::31;
 allow 2a0b:f4c2:3::64;
 allow 2a0b:f4c2:3::65;
 allow 2a0b:f4c2:3::66;
@@ -1481,6 +1445,7 @@ allow 2a0b:f4c2:3::69;
 allow 2a0b:f4c2:3::70;
 allow 2a0b:f4c2:3::71;
 allow 2a0b:f4c2:3::72;
+allow 2a0b:f4c2:3::73;
 allow 2a0b:f4c2:3::74;
 allow 2a0b:f4c2:3::75;
 allow 2a0b:f4c2:3::76;
@@ -1498,7 +1463,6 @@ allow 2a0b:f4c2:3::87;
 allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
-allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
@@ -1514,11 +1478,6 @@ allow 2a0b:f4c2:4::96;
 allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
-allow 2a0b:f4c2::5;
-allow 2a0b:f4c2::6;
-allow 2a0b:f4c2::7;
-allow 2a0b:f4c2::8;
-allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
@@ -1529,6 +1488,7 @@ allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
+allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1546,9 +1506,10 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
-allow 2a10:1fc0:7::d6ca:a017;
+allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a11:840:6:1b::b3a1:6b14;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1580,6 +1541,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.217.2.115;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1723,6 +1685,7 @@ allow 62.171.137.169;
 allow 62.182.83.179;
 allow 62.182.84.146;
 allow 62.63.244.28;
+allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 67.219.109.141;
@@ -1781,7 +1744,6 @@ allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.215.76.62;
-allow 85.239.60.173;
 allow 85.93.218.204;
 allow 87.118.116.103;
 allow 87.118.116.90;
@@ -1789,11 +1751,13 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.209.197.8;
+allow 88.80.20.86;
 allow 89.147.108.209;
 allow 89.147.108.62;
 allow 89.147.108.90;
 allow 89.147.109.226;
 allow 89.147.110.118;
+allow 89.147.110.154;
 allow 89.147.110.200;
 allow 89.147.110.202;
 allow 89.147.110.214;
@@ -1853,6 +1817,7 @@ allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.37;
+allow 94.177.106.46;
 allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
