--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -119,6 +119,7 @@ deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 2400:8901::f03c:93ff:fe68:23b3;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
+deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
@@ -235,6 +236,7 @@ deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fe09::2;
+deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
 deny 2607:5300:205:200::163a;
@@ -286,6 +288,7 @@ deny 2620:7:6001::157;
 deny 2620:7:6001::158;
 deny 2620:7:6001::159;
 deny 2620:7:6001::160;
+deny 2620:7:6001::161;
 deny 2620:7:6001::162;
 deny 2620:7:6001::163;
 deny 2620:7:6001::164;
@@ -306,6 +309,7 @@ deny 2620:7:6001::178;
 deny 2620:7:6001::179;
 deny 2620:7:6001::180;
 deny 2620:7:6001::181;
+deny 2620:7:6001::182;
 deny 2620:7:6001::183;
 deny 2620:7:6001::184;
 deny 2620:7:6001::185;
@@ -408,6 +412,7 @@ deny 2a03:94e0:24a1:dead::1;
 deny 2a03:94e0:24d4::2;
 deny 2a03:94e0:24d4::3;
 deny 2a03:94e0:24d4::4;
+deny 2a03:94e0:24d4::5;
 deny 2a03:94e0:24d4::6;
 deny 2a03:94e0:24d4::7;
 deny 2a03:94e0:24d4::8;
@@ -467,10 +472,6 @@ deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
 deny 2a06:1700:0:12::4;
-deny 2a06:1700:0:15::1;
-deny 2a06:1700:0:15::2;
-deny 2a06:1700:0:15::3;
-deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
@@ -495,10 +496,6 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
-deny 2a0b:f4c2::;
-deny 2a0b:f4c2::1;
-deny 2a0b:f4c2::10;
-deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::132;
@@ -508,6 +505,7 @@ deny 2a0b:f4c2:1::135;
 deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
+deny 2a0b:f4c2:1::140;
 deny 2a0b:f4c2:1::141;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
@@ -543,6 +541,7 @@ deny 2a0b:f4c2:1::172;
 deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
+deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
 deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
@@ -550,25 +549,13 @@ deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
+deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
 deny 2a0b:f4c2:1::188;
 deny 2a0b:f4c2:1::189;
 deny 2a0b:f4c2:1::190;
 deny 2a0b:f4c2:1::191;
-deny 2a0b:f4c2::12;
-deny 2a0b:f4c2::13;
-deny 2a0b:f4c2::14;
-deny 2a0b:f4c2::15;
-deny 2a0b:f4c2::16;
-deny 2a0b:f4c2::17;
-deny 2a0b:f4c2::18;
-deny 2a0b:f4c2::19;
-deny 2a0b:f4c2::2;
-deny 2a0b:f4c2::20;
-deny 2a0b:f4c2::21;
-deny 2a0b:f4c2::22;
-deny 2a0b:f4c2::23;
 deny 2a0b:f4c2:2::32;
 deny 2a0b:f4c2:2::33;
 deny 2a0b:f4c2:2::34;
@@ -577,7 +564,6 @@ deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
-deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
@@ -585,9 +571,9 @@ deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
 deny 2a0b:f4c2:2::46;
+deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
-deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
@@ -597,17 +583,11 @@ deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
-deny 2a0b:f4c2::26;
+deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
-deny 2a0b:f4c2::27;
-deny 2a0b:f4c2::28;
-deny 2a0b:f4c2::29;
-deny 2a0b:f4c2::3;
-deny 2a0b:f4c2::30;
-deny 2a0b:f4c2::31;
 deny 2a0b:f4c2:3::64;
 deny 2a0b:f4c2:3::65;
 deny 2a0b:f4c2:3::66;
@@ -617,6 +597,7 @@ deny 2a0b:f4c2:3::69;
 deny 2a0b:f4c2:3::70;
 deny 2a0b:f4c2:3::71;
 deny 2a0b:f4c2:3::72;
+deny 2a0b:f4c2:3::73;
 deny 2a0b:f4c2:3::74;
 deny 2a0b:f4c2:3::75;
 deny 2a0b:f4c2:3::76;
@@ -634,7 +615,6 @@ deny 2a0b:f4c2:3::87;
 deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
-deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
@@ -650,11 +630,6 @@ deny 2a0b:f4c2:4::96;
 deny 2a0b:f4c2:4::97;
 deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2:4::99;
-deny 2a0b:f4c2::5;
-deny 2a0b:f4c2::6;
-deny 2a0b:f4c2::7;
-deny 2a0b:f4c2::8;
-deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
@@ -665,6 +640,7 @@ deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:d0::1;
+deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -682,9 +658,10 @@ deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
-deny 2a10:1fc0:7::d6ca:a017;
+deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a11:840:6:1b::b3a1:6b14;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
