--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -130,6 +130,7 @@ allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.149.94;
 allow 141.98.11.62;
+allow 142.171.211.123;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 144.172.118.4;
@@ -150,6 +151,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -167,7 +169,6 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
-allow 165.232.180.181;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
@@ -485,7 +486,6 @@ allow 185.246.188.74;
 allow 185.246.189.77;
 allow 185.246.189.99;
 allow 185.246.86.197;
-allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
@@ -910,6 +910,7 @@ allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
+allow 216.24.216.237;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
@@ -1297,6 +1298,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1307,7 +1309,6 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
-allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
@@ -1507,8 +1508,8 @@ allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
+allow 2a10:1fc0:7::d6ca:a017;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a11:840:6:1b::b3a1:6b14;
 allow 2a12:1e01::2;
@@ -1541,7 +1542,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.217.2.115;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1642,6 +1642,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1678,6 +1679,7 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.88.185.164;
 allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
@@ -1744,6 +1746,7 @@ allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.215.76.62;
+allow 85.239.60.173;
 allow 85.93.218.204;
 allow 87.118.116.103;
 allow 87.118.116.90;
@@ -1764,7 +1767,6 @@ allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
-allow 89.149.37.83;
 allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.234.157.254;
@@ -1777,6 +1779,8 @@ allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
+allow 91.202.5.104;
+allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
 allow 91.208.197.144;
@@ -1787,7 +1791,6 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
-allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
