--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -449,6 +449,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -459,7 +460,6 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
-allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
@@ -659,8 +659,8 @@ allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
+allow 2a10:1fc0:7::d6ca:a017;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a11:840:6:1b::b3a1:6b14;
 allow 2a12:1e01::2;
