--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -232,6 +232,7 @@ deny 179.43.182.232;
 deny 179.43.182.58;
 deny 179.48.251.188;
 deny 180.150.226.99;
+deny 18.211.3.106;
 deny 184.105.48.40;
 deny 184.75.223.219;
 deny 185.100.85.132;
@@ -624,6 +625,7 @@ deny 198.251.84.237;
 deny 198.251.88.18;
 deny 198.251.89.96;
 deny 198.46.166.157;
+deny 198.46.215.32;
 deny 198.50.128.237;
 deny 198.58.107.53;
 deny 198.96.155.3;
@@ -1509,6 +1511,7 @@ deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a10:1fc0:7::d6ca:a017;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a11:840:6:1b::b3a1:6b14;
 deny 2a12:1e01::2;
@@ -1611,7 +1614,6 @@ deny 45.95.169.227;
 deny 45.95.169.228;
 deny 45.95.169.229;
 deny 45.95.169.230;
-deny 45.95.169.255;
 deny 45.95.202.48;
 deny 46.165.243.36;
 deny 46.182.21.248;
@@ -1788,6 +1790,7 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.57;
+deny 91.219.236.101;
 deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
