--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -661,6 +661,7 @@ deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a10:1fc0:7::d6ca:a017;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a11:840:6:1b::b3a1:6b14;
 deny 2a12:1e01::2;
