Update lists at 20240510-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -137,6 +137,7 @@ allow 142.44.234.69;
 allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.73.11;
+allow 144.172.73.6;
 allow 144.217.80.80;
 allow 146.59.234.220;
 allow 146.59.35.246;
@@ -667,6 +668,7 @@ allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.46.166.157;
+allow 198.46.215.32;
 allow 198.50.128.237;
 allow 198.58.107.53;
 allow 198.96.155.3;
@@ -1289,7 +1291,6 @@ allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
-allow 2a03:4000:6:b136::4;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:94e0:2421:dead::1;
@@ -1606,6 +1607,7 @@ allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
+allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
@@ -1613,7 +1615,6 @@ allow 31.42.185.134;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
-allow 37.120.188.156;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
@@ -1721,7 +1722,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.202.163.187;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
@@ -1763,6 +1763,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.80.234.208;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
