--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -400,7 +400,6 @@ deny 2a03:4000:62:8:c855:23ff:fef6:50ee;
 deny 2a03:4000:6:614:d803:40ff:fec3:832a;
 deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
-deny 2a03:4000:6:b136::4;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 deny 2a03:94e0:2421:dead::1;
@@ -717,5 +716,6 @@ deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c814::2;
 deny 2a12:5940:c826::2;
 deny 2a12:5940:f0a8::2;
+deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
