--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -137,6 +137,7 @@ set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.73.11;
+set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
@@ -667,6 +668,7 @@ set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
 set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.46.166.157;
+set_real_ip_from 198.46.215.32;
 set_real_ip_from 198.50.128.237;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
@@ -1289,7 +1291,6 @@ set_real_ip_from 2a03:4000:62:8:c855:23ff:fef6:50ee;
 set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
-set_real_ip_from 2a03:4000:6:b136::4;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:94e0:2421:dead::1;
@@ -1606,6 +1607,7 @@ set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c814::2;
 set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:5940:f0a8::2;
+set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
@@ -1613,7 +1615,6 @@ set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
-set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
@@ -1721,7 +1722,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.202.163.187;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
@@ -1763,6 +1763,7 @@ set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 54.80.234.208;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
