Update lists at 20240511-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -248,7 +248,6 @@ deny 185.100.87.41;
 deny 185.10.16.41;
 deny 185.106.94.195;
 deny 185.107.70.56;
-deny 185.11.139.198;
 deny 185.113.128.30;
 deny 185.126.117.21;
 deny 185.129.61.1;
@@ -970,32 +969,18 @@ deny 23.137.253.109;
 deny 23.137.253.110;
 deny 23.137.253.9;
 deny 23.152.24.77;
-deny 23.154.177.10;
-deny 23.154.177.11;
-deny 23.154.177.12;
-deny 23.154.177.13;
-deny 23.154.177.14;
-deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
 deny 23.154.177.18;
 deny 23.154.177.19;
-deny 23.154.177.2;
 deny 23.154.177.20;
 deny 23.154.177.21;
 deny 23.154.177.22;
 deny 23.154.177.23;
 deny 23.154.177.24;
 deny 23.154.177.25;
-deny 23.154.177.3;
-deny 23.154.177.4;
-deny 23.154.177.5;
-deny 23.154.177.6;
-deny 23.154.177.7;
-deny 23.154.177.8;
-deny 23.154.177.9;
 deny 23.155.24.6;
-deny 23.20.243.155;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.133.162;
 deny 23.94.211.25;
@@ -1019,6 +1004,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:12:759::1;
 deny 2602:fc24:12:77c0::1;
@@ -1244,7 +1230,6 @@ deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3f::c0cc:69;
 deny 2a00:1728:3f::c0cc:80;
 deny 2a00:1728:f:f:f:f:c03c:9898;
-deny 2a00:17d8:100:1::fd1;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
@@ -1757,6 +1742,7 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.208.238.80;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1806,6 +1792,7 @@ deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
 deny 79.124.8.241;
+deny 79.137.198.213;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
