--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -248,7 +248,6 @@ allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.94.195;
 allow 185.107.70.56;
-allow 185.11.139.198;
 allow 185.113.128.30;
 allow 185.126.117.21;
 allow 185.129.61.1;
@@ -970,32 +969,18 @@ allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.9;
 allow 23.152.24.77;
-allow 23.154.177.10;
-allow 23.154.177.11;
-allow 23.154.177.12;
-allow 23.154.177.13;
-allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
 allow 23.154.177.19;
-allow 23.154.177.2;
 allow 23.154.177.20;
 allow 23.154.177.21;
 allow 23.154.177.22;
 allow 23.154.177.23;
 allow 23.154.177.24;
 allow 23.154.177.25;
-allow 23.154.177.3;
-allow 23.154.177.4;
-allow 23.154.177.5;
-allow 23.154.177.6;
-allow 23.154.177.7;
-allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.20.243.155;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.133.162;
 allow 23.94.211.25;
@@ -1019,6 +1004,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
@@ -1244,7 +1230,6 @@ allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:69;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
-allow 2a00:17d8:100:1::fd1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
@@ -1757,6 +1742,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.208.238.80;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1806,6 +1792,7 @@ allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
+allow 79.137.198.213;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
