--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -248,7 +248,6 @@ set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
-set_real_ip_from 185.11.139.198;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.126.117.21;
 set_real_ip_from 185.129.61.1;
@@ -970,32 +969,18 @@ set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.9;
 set_real_ip_from 23.152.24.77;
-set_real_ip_from 23.154.177.10;
-set_real_ip_from 23.154.177.11;
-set_real_ip_from 23.154.177.12;
-set_real_ip_from 23.154.177.13;
-set_real_ip_from 23.154.177.14;
-set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
 set_real_ip_from 23.154.177.18;
 set_real_ip_from 23.154.177.19;
-set_real_ip_from 23.154.177.2;
 set_real_ip_from 23.154.177.20;
 set_real_ip_from 23.154.177.21;
 set_real_ip_from 23.154.177.22;
 set_real_ip_from 23.154.177.23;
 set_real_ip_from 23.154.177.24;
 set_real_ip_from 23.154.177.25;
-set_real_ip_from 23.154.177.3;
-set_real_ip_from 23.154.177.4;
-set_real_ip_from 23.154.177.5;
-set_real_ip_from 23.154.177.6;
-set_real_ip_from 23.154.177.7;
-set_real_ip_from 23.154.177.8;
-set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.20.243.155;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.133.162;
 set_real_ip_from 23.94.211.25;
@@ -1019,6 +1004,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:12:759::1;
 set_real_ip_from 2602:fc24:12:77c0::1;
@@ -1244,7 +1230,6 @@ set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:3f::c0cc:69;
 set_real_ip_from 2a00:1728:3f::c0cc:80;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
-set_real_ip_from 2a00:17d8:100:1::fd1;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
@@ -1757,6 +1742,7 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.208.238.80;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1806,6 +1792,7 @@ set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
+set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
