Update lists at 20240513-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -115,7 +115,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -131,7 +130,6 @@ allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.149.94;
 allow 141.98.11.62;
-allow 142.171.211.123;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 144.172.118.4;
@@ -263,6 +261,7 @@ allow 185.146.232.243;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -616,6 +615,7 @@ allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
+allow 193.218.118.178;
 allow 193.218.118.181;
 allow 193.218.118.182;
 allow 193.218.118.188;
@@ -793,7 +793,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -1580,6 +1579,7 @@ allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
+allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1599,6 +1599,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 3.228.230.119;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1690,8 +1691,6 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
-allow 50.3.182.133;
-allow 50.3.182.156;
 allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
@@ -1712,7 +1711,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1728,7 +1726,6 @@ allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
-allow 52.55.38.22;
 allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
@@ -1910,3 +1907,4 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
+allow 98.128.173.33;
